# app/Http/Controllers/ArchiveSwagger.php
@@ -16,9 +16,11 @@ use Swagger\Annotations as SWG;
  *     @SWG\Definition(
  *         definition="MovieSave",
  *         required={"name","director","classification"},
- *         @SWG\Property(property="name", type="string"),
- *         @SWG\Property(property="director", type="string"),
- *         @SWG\Property(property="classification", type="string",enum={"ADULT","PARENTS_SUGGESTED","KIDS","GENERAL"}),
+ *         @SWG\Property(property="name", type="string",default="Matrix", example="Matrix"),
+ *         @SWG\Property(property="year", type="number",default=1999, example=1999),
+ *         @SWG\Property(property="description", type="string",default="Um jovem programador é atormentado por estranhos pesadelos nos quais sempre está conectado por cabos a um imenso sistema...", example="Um jovem programador é atormentado por estranhos pesadelos nos quais sempre está conectado por cabos a um imenso sistema..."),
+ *         @SWG\Property(property="director", type="string",default="Lana Wachowski, Lilly Wachowski", example="Lana Wachowski, Lilly Wachowski"),
+ *         @SWG\Property(property="classification", type="string", default="PARENTS_SUGGESTED",enum={"ADULT","PARENTS_SUGGESTED","KIDS","GENERAL"}),
  *         @SWG\Property(
  *              property="actors",
  *              type="array",
@@ -32,12 +34,16 @@ use Swagger\Annotations as SWG;
  *         required={"name","director","classification"},
  *         @SWG\Property(property="name", type="string"),
  *         @SWG\Property(property="director", type="string"),
+ *         @SWG\Property(property="year", type="number"),
+ *         @SWG\Property(property="description", type="string"),
  *         @SWG\Property(property="classification", type="string",enum={"ADULT","PARENTS_SUGGESTED","KIDS","GENERAL"}),
  *      ),
  *     @SWG\Definition(
  *         definition="Actor",
- *         required={"name"},
- *         @SWG\Property(property="name", type="string"),
+ *         required={"name","personage","paper"},
+ *         @SWG\Property(property="name", type="string", default="Keanu Reeves",example="Keanu Reeves"),
+ *         @SWG\Property(property="personage", type="string", default="Neo",example="Neo"),
+ *         @SWG\Property(property="paper", type="string", default="Um jovem programador é atormentado por estranhos pesadelos nos quais..",example="Um jovem programador é atormentado por estranhos pesadelos nos quais..."),
  *      ),
  *     @SWG\Definition(
  *         definition="MovieActors",
@@ -168,10 +174,28 @@ use Swagger\Annotations as SWG;
  *         operationId="getMovie",
  *         summary="get all movie",
  *         @SWG\Response(
- *             response=200,
- *             description="Success",
- *             @SWG\Schema(ref="#/definitions/MovieListResponse"),
- *         ),
+ *          response=200,
+ *          description="successful operation",
+ *              @SWG\Schema (
+ *                  @SWG\Property(property="current_page", type="integer"),
+ *                  @SWG\Property(property="first_page_url", type="string"),
+ *                  @SWG\Property(property="from", type="integer"),
+ *                  @SWG\Property(property="last_page", type="integer"),
+ *                  @SWG\Property(property="next_page_url", type="string"),
+ *                  @SWG\Property(property="path", type="string"),
+ *                  @SWG\Property(property="per_page", type="integer"),
+ *                  @SWG\Property(property="prev_page_url", type="integer"),
+ *                  @SWG\Property(property="to", type="string"),
+ *                  @SWG\Property(property="total", type="integer"),
+ *                  @SWG\Property(
+ *                      property="data",
+ *                      type="array",
+ *                      @SWG\Items(
+ *                          ref="#/definitions/MovieListResponse",
+ *                      ),
+ *                  ),
+ *              ),
+ *          ),
  *         @SWG\Response(response=400, description="Bad request"),
  *         @SWG\Response(response=500, description="Server Errors"),
  *         security={
@@ -274,10 +298,28 @@ use Swagger\Annotations as SWG;
  *         operationId="getActor",
  *         summary="get all actor",
  *         @SWG\Response(
- *             response=200,
- *             description="Success",
- *             @SWG\Schema(ref="#/definitions/ActorListResponse"),
- *         ),
+ *          response=200,
+ *          description="successful operation",
+ *              @SWG\Schema (
+ *                  @SWG\Property(property="current_page", type="integer"),
+ *                  @SWG\Property(property="first_page_url", type="string"),
+ *                  @SWG\Property(property="from", type="integer"),
+ *                  @SWG\Property(property="last_page", type="integer"),
+ *                  @SWG\Property(property="next_page_url", type="string"),
+ *                  @SWG\Property(property="path", type="string"),
+ *                  @SWG\Property(property="per_page", type="integer"),
+ *                  @SWG\Property(property="prev_page_url", type="integer"),
+ *                  @SWG\Property(property="to", type="string"),
+ *                  @SWG\Property(property="total", type="integer"),
+ *                  @SWG\Property(
+ *                      property="data",
+ *                      type="array",
+ *                      @SWG\Items(
+ *                          ref="#/definitions/ActorListResponse",
+ *                      ),
+ *                  ),
+ *              ),
+ *          ),
  *         @SWG\Response(response=400, description="Bad request"),
  *         @SWG\Response(response=500, description="Server Errors"),
  *         security={
